--- a/pdfcreator/src/main/res/layout/activity_pdfcreator.xml
+++ b/pdfcreator/src/main/res/layout/activity_pdfcreator.xml
@@ -113,6 +113,8 @@
             style="@style/Widget.AppCompat.Button.Borderless"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:textColor="@android:color/white"
+            android:backgroundTint="@android:color/black"
             android:text="@string/text_next" />
 
     </LinearLayout>
